export const snapshot = {};

snapshot[`pwsh / file / find (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/file/find?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`pwsh / file / sync (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/file/sync?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`pwsh / pack / add (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`pwsh / pack / find (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`pwsh / virt / list (redirect) 1`] = `
\`& "\${env:WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#''http://x/sh/nu/virt/list?sysOsPlat=linux&wutNuPinned=1''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix ''.nu'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / file / find (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/find?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / file / sync (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/file/sync?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / pack / add (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/add/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / pack / find (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/pack/find/firefox?sysOsPlat=linux&sysOs=arch&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;

snapshot[`zsh / virt / list (redirect) 1`] = `
\`"\${WUT_HOME}/vendor/nu" --no-config-file -c '\$env.REQ_URL_SH = r#'\\\\''http://x/sh/nu/virt/list?sysOsPlat=linux&wutNuPinned=1'\\\\''#

# by file, not argument: a real script can exceed the command line length limit
let scriptFilePath = (mktemp --suffix '\\\\''.nu'\\\\'' --tmpdir)
http get --raw --redirect-mode follow \$env.REQ_URL_SH | save --force \$scriptFilePath
let failure = (try { ^(\$nu.current-exe) --no-config-file \$scriptFilePath; null } catch { |e| \$e })
rm --force --permanent \$scriptFilePath
if \$failure != null { error make --unspanned { msg: \$failure.msg } }

'\`
`;
